# openapi/openapi.yaml
@@ -27,7 +27,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              properties:
+                task:
+                  type: string
+                is_done:
+                  type: boolean
+                user_id:
+                  type: integer
       responses:
         '201':
           description: The created task
@@ -165,6 +172,28 @@ paths:
         '404':
           description: User not found
 
+  /users/{user_id}/tasks:
+    get:
+      summary: Get tasks for a specific user
+      operationId: GetTasksByUserID
+      tags:
+        - tasks
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: A list of tasks for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+
 components:
   schemas:
     Task:
@@ -177,6 +206,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
 
     User:
       type: object
@@ -192,10 +224,6 @@ components:
         updated_at:
           type: string
           format: date-time
-        deleted_at:
-          type: string
-          format: date-time
-          nullable: true
 
     UserCreate:
       type: object
